[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/FallGame/Sprites/Coin.png" type="Texture" id=1]
[ext_resource path="res://FallGame/SingleCoin.gd" type="Script" id=2]
[ext_resource path="res://Assets/SFX/Pickup_Coin1.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/SFX/Pickup_Coin2.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/SFX/Pickup_Coin3.wav" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 20.069

[node name="SingleCoin" type="Node2D" groups=[
"Coins",
]]
script = ExtResource( 2 )

[node name="CoinArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="Sprite" type="Sprite" parent="CoinArea"]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CoinArea"]
shape = SubResource( 1 )

[node name="SFX" type="Node" parent="."]

[node name="Pickup1" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 3 )

[node name="Pickup2" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 4 )

[node name="Pickup3" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 5 )

[connection signal="body_entered" from="CoinArea" to="." method="_on_CoinArea_body_entered"]
